--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -18,9 +18,12 @@
                         <a class="nav-link" href="/edit_profil">Profil</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/new_post">Nouveau post</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">Déconnexion</a>
                     </li>
-                {% else %}
+                {% else %}                    
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Connexion</a>
                     </li>
